! More fixes to block spacing.

--- a/portal.css
+++ b/portal.css
@@ -57,7 +57,7 @@
 {
 	width: 100%;
 	text-align: center;
-	padding: 0.5em 0;
+	padding-top: 0.5em;
 }
 .sp_clear
 {
